@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4SteppingManager.cc,v 1.2 1999-03-24 04:46:08 tsasaki Exp $
+// $Id: G4SteppingManager.cc,v 1.3 1999-04-15 08:47:21 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -44,7 +44,7 @@ G4SteppingManager::G4SteppingManager()
    fPreStepPoint  = fStep->GetPreStepPoint();
    fPostStepPoint = fStep->GetPostStepPoint();
 #ifdef G4VERBOSE
-   if(fVerbose == NULL ) fVerbose = new G4SteppingVerbose(this);
+   fVerbose = new G4SteppingVerbose(this);
 #endif
    fSelectedAtRestDoItVector 
       = new G4SelectedAtRestDoItVector(SIZEofSelectedDoIt);
@@ -141,7 +141,6 @@ G4StepStatus G4SteppingManager::Stepping()
      // Store the Step length (geometrical length) to G4Step and G4Track
      fStep->SetStepLength( PhysicalStep );
      fTrack->SetStepLength( PhysicalStep );
-     G4double GeomStepLength = PhysicalStep;
 
      // Store StepStatus to PostStepPoint
      fStep->GetPostStepPoint()->SetStepStatus( fStepStatus );
@@ -154,7 +153,11 @@ G4StepStatus G4SteppingManager::Stepping()
 
      // Update safety after invocation of all AlongStepDoIts
      endpointSafOrigin= fPostStepPoint->GetPosition();
-     endpointSafety=  max( proposedSafety - GeomStepLength, 0.);
+     endpointSafety=  max( proposedSafety -
+			   (fPostStepPoint->GetPosition() -
+			    fPreStepPoint->GetPosition()
+			    ).mag(),
+			   0.);
 
      fStep->GetPostStepPoint()->SetSafety( endpointSafety );
 
@@ -197,7 +200,7 @@ G4StepStatus G4SteppingManager::Stepping()
 // User intervention process.
    fStep->SetTrack(fTrack);
    if( fUserSteppingAction != NULL ) {
-      fUserSteppingAction->UserSteppingAction();
+      fUserSteppingAction->UserSteppingAction(fStep);
    }
 
 // Stepping process finish. Return the value of the StepStatus.
