@@ -1,4 +1,4 @@
-$Id: History,v 1.3 1999-03-24 04:41:36 tsasaki Exp $
+$Id: History,v 1.4 1999-04-15 08:46:45 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Apr 15, 99 M.Asai (tracking-01-00-03)
+- Make arguments in user action classes take const pointers.
+- Make trajectory and trajectory point as derivable classes.
 Mar 23, 99 T.Sasaki    (tracking-01-00-02)
 - Fix for precision problem of safety in SteppingManager by John Apostolakis
 - G4VSteppingVerbose is introduced  
